<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_workout_detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_workout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/workout_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/detail_workout_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/detail_workout_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/detail_workout_last_record_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_workout_image_view"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_record"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_workout_last_record_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_workout_last_record_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_record_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/repeat_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_workout_last_record_date_text_view"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/reps_count"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_title_text_view"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_workout_minus_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/minus_button"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_workout_repeat_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textSize="32sp" />

            <Button
                android:id="@+id/detail_workout_plus_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/plus_button"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/weight_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/weight"
            android:textSize="24sp" />

        <SeekBar
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:min="1"
            android:max="200"
            android:id="@+id/detail_workout_seek_bar"
            android:layout_below="@id/weight_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/detail_workout_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@id/detail_workout_seek_bar"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" />

        <TextView
            android:id="@+id/detail_workout_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_workout_save_button"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ipsum" />

    </RelativeLayout>
</ScrollView>
